--- a/assignments/a02.markdown
+++ b/assignments/a02.markdown
@@ -17,7 +17,7 @@ variety of commands that let the user indicate which files should be
 committed, reverted, and so on. These commands and the way they
 interact defines each VCS's "workflow."
 
-All workflows involve at least two concepts:
+All VCS workflows involve at least two concepts:
 
 - "workspace" -- the files on your computer.
 - "repository" -- the history of changes to all tracked files.
@@ -33,45 +33,53 @@ pulls, etc. These significantly complicate matters so we will not
 worry about them here. We are only going to work with the workspace,
 index, and (local) repository.
 
-The following diagram shows the operations that need to be understood by the git planner, and how the impact the workspace, index, and repository. See the sections below for details about each command.
+The following diagram shows the operations that need to be understood by the git planner, and how they impact the workspace, index, and repository. See the notes below for details about each command.
 
 ![Git workflow](/images/git-workflow.png)
 
 ## Predicates
 
-These predicates correspond to the status shown by `git status` (more
-specifically, `git status --porcelain`), except the `stashed`
-predicate which `git status` does not show.
+Recall that in a planning problem, a "predicate" is a property of a state. The predicate can be true or false. These predicates correspond to the status shown by `git status` (more specifically, `git status --porcelain`).
 
 - `(untracked ?f)` -- file exists in workspace but has never been "added" to index for any commit.
 - `(modified-in-workspace ?f)` -- file has been modified but this change has not been "added" to the index.
 - `(deleted-in-workspace ?f)` -- file has been deleted but this change has not be "added" (or "rm'ed") to the index.
-- `(updated-in-index ?f)` -- file has been modified and this change has been "added" to the index but not committed.
-- `(added-to-index ?f)` -- a new file has been "added" to the index but not committed.
-- `(deleted-from-index ?f)` -- a deleted file has been "added" (or "rm'ed") to the index but not committed.
+- `(updated-in-index ?f)` -- file has been modified and this change has been added to the index but not committed.
+- `(added-to-index ?f)` -- a new file has been added to the index but not committed.
+- `(deleted-from-index ?f)` -- a deleted file has been added (or rm'ed) to the index but not committed.
 - `(committed ?f)` -- all changes were added to the index and then committed.
 
 ## Actions
 
-I've intentionally not described some of these actions. Refer to the man pages, e.g., `man git-add` or `man git-checkout`.
+Recall that in a planning problem, an "action" transforms one state to another, and typically changes the truth-value of some predicates. These changes are the action's "effects." Relevant git actions are listed below. I've intentionally not described the actions. Refer to the man pages, e.g., `man git-add` or `man git-checkout` to understand the effects of each action.
 
-- `(add ?f)` -- corresponds to `git add <file>`. If a file was deleted in the workspace, you can still use `git add` to record that deletion in the index.
+- `(add ?f)` -- corresponds to `git add <file>`. (Note: `git add` also works for removed files and is an alias for `git rm`).
 - `(checkout ?f)` -- corresponds to `git checkout <file>`.
-- `(reset ?f)` -- corresponds to `git reset -- <file>`; this is an "undo" for `git add <file>`, i.e., it clears the index of any data about the file, but does not touch the file in the workspace.
-- `(reset-hard)` -- corresponds to `git reset --hard`; erases all recorded changes in the index and rewrites tracked files in the workspace to their last committed state. This operation is dangerous!
-- `(commit)` -- corresponds to `git commit`.
+- `(reset ?f)` -- corresponds to `git reset -- <file>`.
+- `(reset-hard)` -- corresponds to `git reset --hard`. Note there is no parameter (a file is not specified for this action).
+- `(commit)` -- corresponds to `git commit`. Note there is no parameter.
+
+## Task
+
+Write a `domain.pddl` file that solves the planning problems show below. All files are available on londo at `/home/jeckroth/csci431/assignment/A02`, except the missing `domain.pddl` file.
+
+You can test your PDDL code by running `fast-downward.py prob1.pddl --search "astar(blind())" where `prob1.pddl` is whichever problem file you want to test. Your `domain.pddl` file will be loaded automatically.
 
 ## Deliverables
 
-You only need to define and submit the `domain.pddl` file. I will provide the various problem files that your domain needs to solve.
+You only need to define and submit the `domain.pddl` file. The various problem files that your domain needs to solve are listed below. All files are available on londo at `/home/jeckroth/csci431/assignment/A02`.
 
 ## Advice
 
-I have provided a script, `pddl-problem-from-repl`, that executes `git
-status` on the current repository and prints the start of a PDDL
-problem file representing the current state of the repository. Using
-this tool, you can try various git commands and see their effects in
-terms of the predicates defined above.
+You can find out what the various actions listed above do to a git repository
+in terms of predicates.  I have written a script, `pddl-problem-from-repo`,
+that executes `git status` on the current repository and prints the start of a
+PDDL problem file representing the current state of the repository. You can run
+this script on londo by just typing its name after changing your current
+directory to a git repository. Just set up a temporary git repo with a certain
+state, then run the script. Examine the predicates. Now change the state of the
+git repo by running a command that corresponds to one of the actions listed
+above. Then run the script again to examine the changes.
 
 For example, given this git repo:
 
@@ -128,8 +136,8 @@ You can see that a.txt is considered `added-to-index` while b.txt is considered 
 Here are some examples that your domain file must be able to
 solve. The setup (with actual git commands) is just for illustration;
 do you not need to actually create an example repository and example
-files. The PDDL problem file and a plan, as found by fast-downward,
-are also given. All that is missing is your domain file.
+files. The corresponding PDDL problem file and a generated plan, as found by
+`fast-downward.py`, are also given. All that is missing is your domain file, `domain.pddl`.
 
 ### Example 1
 
@@ -173,7 +181,7 @@ Corresponding problem file:
 Plan as found by fast-downward:
 
 ~~~
-$ ../fast-downward/fast-downward.py prob1.pddl --search "astar(blind())"
+$ fast-downward.py prob1.pddl --search "astar(blind())"
 
 $ cat sas_plan
 (add "a.txt")
@@ -220,7 +228,6 @@ Corresponding problem file:
    ;; ?? b.txt
    (untracked "b.txt")
    )
-  ;; TODO: goal must be specified
   (:goal
    (and (untracked "a.txt")
         (committed "b.txt"))
@@ -231,7 +238,7 @@ Corresponding problem file:
 Plan as found by fast-downward:
 
 ~~~
-$ ../fast-downward/fast-downward.py prob1.pddl --search "astar(blind())"
+$ fast-downward.py prob1.pddl --search "astar(blind())"
 
 $ cat sas_plan
 (add "b.txt")
@@ -240,26 +247,213 @@ $ cat sas_plan
 ; cost = 3 (unit cost)
 ~~~
 
+### Example 3
+
+Setup:
+
+~~~
+mkdir prob3
+cd prob3
+git init
+echo "aaa" > a.txt
+echo "bbb" > b.txt
+git add b.txt
+~~~
+
+Goals:
+
+- a.txt is untracked
+- b.txt is deleted (neither untracked nor committed nor ... any other predicate)
+
+Solution:
+
+~~~
+git reset --hard
+~~~
+
+A reset-hard action erases b.txt from the workspace since it was added to the index. If it were never added to the index (i.e., remained untracked), then reset-hard would have left it alone.
+
+Corresponding problem file:
+
+~~~
+(define (problem p)
+  (:domain git)
+  (:objects "b.txt" "a.txt")
+  (:init
+   ;; initial conditions determined by 'git status --porcelain' output
+   ;; A  b.txt
+   (added-to-index "b.txt")
+   ;; ?? a.txt
+   (untracked "a.txt")
+   )
+  (:goal
+   (and (untracked "a.txt")
+        (not (untracked "b.txt"))
+        (not (committed "b.txt"))
+        (not (modified-in-workspace "b.txt"))
+        (not (deleted-in-workspace "b.txt"))
+        (not (updated-in-index "b.txt"))
+        (not (added-to-index "b.txt"))
+        (not (deleted-from-index "b.txt")))
+  )
+)
+~~~
+
+Plan as found by fast-downward:
+
+~~~
+$ fast-downward.py prob3.pddl --search "astar(blind())"
+
+$ cat sas_plan
+(reset-hard )
+; cost = 1 (unit cost)
+~~~
+
+### Example 4
+
+Setup:
+
+~~~
+mkdir prob4
+cd prob4
+git init
+echo "aaa" > a.txt
+echo "bbb" > b.txt
+git add a.txt
+git add b.txt
+git commit -m "message..."
+echo "xxx" > a.txt
+rm b.txt
+~~~
+
+Goals:
+
+- a.txt changes are commited
+- b.txt deletion is recorded in index but not committed
+
+
+Solution:
+
+~~~
+git add a.txt
+git commit -m "message..."
+git add b.txt
+~~~
+
+Corresponding problem file:
+
+~~~
+(define (problem p)
+  (:domain git)
+  (:objects "a.txt" "b.txt")
+  (:init
+   ;; initial conditions determined by 'git status --porcelain' output
+   ;;  M a.txt
+   (modified-in-workspace "a.txt")
+   ;;  D b.txt
+   (deleted-in-workspace "b.txt")
+   )
+  (:goal
+   (and
+    (deleted-from-index "b.txt")
+    (committed "a.txt"))
+  )
+)
+~~~
+
+Plan as found by fast-downward:
+
+~~~
+$ fast-downward.py prob4.pddl --search "astar(blind())"
+
+$ cat sas_plan
+(add "a.txt")
+(commit )
+(add "b.txt")
+; cost = 3 (unit cost)
+~~~
+
+### Example 5
+
+Setup:
+
+~~~
+mkdir prob4
+cd prob4
+git init
+echo "aaa" > a.txt
+echo "bbb" > b.txt
+echo "ccc" > c.txt
+git add a.txt
+git add b.txt
+git commit -m "message..."
+echo "xxx" > a.txt
+git add a.txt
+rm b.txt
+echo "yyy" > c.txt
+~~~
+
+Goals:
+
+- a.txt changes are erased (back to committed state)
+- b.txt deletion is recorded in index but not committed
+- c.txt changes are committed
+
+
+Solution:
+
+~~~
+git reset a.txt
+git add c.txt
+git commit -m "message..."
+git add b.txt
+~~~
+
+Corresponding problem file:
+
+~~~
+(define (problem p)
+  (:domain git)
+  (:objects "a.txt" "b.txt" "c.txt")
+  (:init
+   ;; initial conditions determined by 'git status --porcelain' output
+   ;; M  a.txt
+   (updated-in-index "a.txt")
+   ;;  D b.txt
+   (deleted-in-workspace "b.txt")
+   ;; ?? c.txt
+   (untracked "c.txt")
+   )
+  (:goal
+   (and
+    (modified-in-workspace "a.txt")
+    (deleted-from-index "b.txt")
+    (committed "c.txt"))
+  )
+)
+~~~
+
+Plan as found by fast-downward:
+
+~~~
+$ fast-downward.py prob4.pddl --search "astar(blind())"
+
+$ cat sas_plan
+(add "c.txt")
+(reset "a.txt")
+(commit )
+(add "b.txt")
+; cost = 4 (unit cost)
+~~~
+
 ## Grading rubric
 
 Out of 5 points:
 
-{% comment %}
-### Example N
-
-Erases b.txt since it was added to the index but then a reset-hard
-occurred. If it was never added to the index, then reset-hard would
-have left it alone.
-
-~~~
-echo "bbb" > b.txt
-git add b.txt
-git reset --hard
-~~~
-
-
-## Testing script
-
-{% endcomment %}
-
+- 5 pts: All example problems produce a correct plan.
+- 4 pts: 4/5 example problems produce a correct plan.
+- 3 pts: 3/5 example problems produce a correct plan.
+- 2 pts: 2/5 example problems produce a correct plan.
+- 1 pt: A `domain.pddl` file was submitted but it has syntax or logic errors and is unable to produce any plans.
+- 0 pts: No submission.
 
