--- a/assignments/a09.markdown
+++ b/assignments/a09.markdown
@@ -7,9 +7,24 @@ categories: [assignments]
 
 # A09: NFL play-by-play
 
-This assignment helps you practice classification and classification evaluation. Your task is to train a classifier that best predicts whether an NFL play will be successful. We will use the NFL play-by-play data from [NFLsavant.com](http://nflsavant.com/about.php) dataset. Details forthcoming.
+This assignment helps you practice classification and classification evaluation. Your task is to train a classifier that best predicts whether an NFL play will be successful. We will use the NFL play-by-play data from [NFLsavant.com](http://nflsavant.com/about.php) dataset.
 
-{% comment %}
-Use NFL play-by-play data to predict success(?) or yards(?) (regression)
-{% endcomment %}
+## Background
+
+The NFL play-by-play data includes the following details for each play:
+
+- offense team and defense team for the play
+- quarter, minute, second
+- down, yard line, yards to go
+- yards earned (zero or negative if unsuccessful)
+- play type: QB kneel, pass, rush, punt, etc.
+- outcome: incomplete, fumble, interception, sack, etc.
+
+There are about 140,000 plays recored across three seasons (2013-09-05 to 2016-01-03).
+
+## Task
+
+## Related stickers
+
+- Most Predictive NFL Play-by-Play Award
 
