--- a/assignments/a10.markdown
+++ b/assignments/a10.markdown
@@ -19,7 +19,7 @@ MLP configurations:
 - epoch count ("trainingTime" in Weka)
 - learning rate
 
-Run at least 3 variations of each (so at least 9 experiments). Measure the accuracy (weighted avg. Prevision, Recall, and F-Measure) and training time for each configuration. The training time can be seen in Weka just above the summary; it is written as: "Time taken to build model: XYZ seconds".
+Run at least 3 variations of each (so at least 9 experiments). Measure the accuracy (weighted avg. Precision, Recall, and F-Measure) and training time for each configuration. The training time can be seen in Weka just above the summary; it is written as: "Time taken to build model: XYZ seconds".
 
 Summarize the results by answering the following questions:
 
